improve startup performance