@@ -1,6 +1,5 @@
 /*
  * This build file was auto generated by running the Gradle 'init' task
- *
  */
 buildscript {
   dependencies {
@@ -19,6 +18,7 @@ buildscript {
 
 apply plugin: 'spring-boot'
 apply plugin: 'java'
+apply plugin: 'idea'
 apply plugin: 'heroku'
 
 repositories {
@@ -36,7 +36,7 @@ dependencies {
   compile 'com.squareup.retrofit:converter-simplexml:1.9.0'
   compile 'commons-io:commons-io:2.4'
   compile 'com.google.code.gson:gson:2.3.1'
-  compile('org.simpleframework:simple-xml:2.7.1') {
+  compile ('org.simpleframework:simple-xml:2.7.1') {
     exclude module: 'stax:stax-api'
     exclude module: 'stax:stax'
     exclude module: 'xpp3:xpp3'
@@ -49,8 +49,8 @@ dependencies {
 
   runtime 'net.sourceforge.nekohtml:nekohtml:1.9.21'
   runtime 'org.flywaydb:flyway-core:3.2.1'
-  runtime 'com.h2database:h2:1.4.+'
-  runtime 'org.postgresql:postgresql:9.4-1201-jdbc4'
+  runtime 'com.h2database:h2:1.4.188'
+  runtime 'org.postgresql:postgresql:9.4-1202-jdbc42'
 
   testCompile 'junit:junit:4.12'
 }
@@ -60,10 +60,25 @@ bootRun {
   // `gradle bootRun -PactiveProfile="your-profile-name"`
   //   or "development" as default
   def profileName = project.hasProperty("activeProfile") ? project.activeProfile : "development"
+  def appOpts = ["-Dspring.profiles.active=$profileName"]
+  def stdOpts = ["-Dfile.encoding=UTF8", "-Xmx384m", "-Xss512k"]
+  def gcOpts = ["-XX:+PrintGCDetails", "-XX:+PrintHeapAtGC", "-XX:+PrintGCDateStamps", "-XX:+PrintTenuringDistribution", "-XX:+UseConcMarkSweepGC"]
+  jvmArgs = appOpts + stdOpts + gcOpts
+}
 
-  jvmArgs = ["-Dspring.profiles.active=$profileName"]
+idea {
+  module {
+    inheritOutputDirs = false
+    outputDir = file("$buildDir/classes/main/")
+  }
 }
 
 if (file('herokuSettings.gradle').exists()) apply from: 'herokuSettings.gradle'
 
-task stage(dependsOn: 'build')
+// `stage` is to deploy the application on the heroku dyno.
+task stage {
+  dependsOn 'clean'    // clean rebuild
+  dependsOn 'build'
+
+  mustRunAfter 'clean'
+}
